--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,3 +1,15 @@
+/* Custom Fonts */
+
+@font-face {
+    font-family: 'Opposit Bold';
+    src: url('Opposit-Bold.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'Byrd Regular';
+    src: url('Byrd-Regular.otf') format('opentype');
+}
+
 /* Color custom properties */
 
 :root,
@@ -747,8 +759,8 @@ summary::-webkit-details-marker {
 
 /* base-focus */
 /*
-  Focus ring - default (with offset)
-*/
+    Focus ring - default (with offset)
+  */
 
 *:focus {
     outline: 0;
@@ -778,8 +790,8 @@ summary::-webkit-details-marker {
 }
 
 /*
-  Focus ring - inset
-*/
+    Focus ring - inset
+  */
 
 .focus-inset:focus-visible {
     outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
@@ -800,8 +812,8 @@ summary::-webkit-details-marker {
 }
 
 /*
-  Focus ring - none
-*/
+    Focus ring - none
+  */
 
 /* Dangerous for a11y - Use with care */
 .focus-none {
@@ -1855,6 +1867,20 @@ input[type='checkbox'] {
     display: block;
     position: relative;
     background-color: rgb(var(--color-background));
+    border-top: 1rem solid #E8EFFA;
+
+    &::before {
+        position: absolute;
+        border-top: 0.4rem solid #000;
+        content: "";
+        margin: 0 auto;
+        top: 50%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        z-index: 1;
+    }
 }
 
 .header-wrapper--border-bottom {
@@ -1889,8 +1915,8 @@ input[type='checkbox'] {
     }
 
     .header--middle-left {
-        grid-template-areas: 'heading navigation icons';
-        grid-template-columns: auto auto 1fr;
+        grid-template-areas: 'navigation heading icons';
+        grid-template-columns: auto auto 0.1fr;
         column-gap: 2rem;
     }
 
@@ -1956,11 +1982,15 @@ input[type='checkbox'] {
 @media screen and (min-width: 990px) {
     .header__heading-link {
         margin-left: -0.75rem;
+        background-color: #fff;
+        z-index: 10;
+        position: relative;
     }
 
     .header__heading,
     .header__heading-link {
-        justify-self: start;
+        margin-left: auto;
+        justify-self: end;
     }
 
     .header--top-center .header__heading-link,
@@ -2017,6 +2047,9 @@ input[type='checkbox'] {
 .header__icon--cart {
     position: relative;
     margin-right: -1.2rem;
+    background-color: #fff;
+    z-index: 10;
+    margin-left: 2rem;
 }
 
 @media screen and (max-width: 989px) {
@@ -2042,6 +2075,8 @@ menu-drawer+.header__search {
 .header__search {
     display: inline-flex;
     line-height: 0;
+    background-color: #fff;
+    z-index: 10;
 }
 
 .header--top-center>.header__search {
@@ -2220,20 +2255,25 @@ details[open]>.header__icon--menu .icon-hamburger {
     transition: text-decoration var(--duration-short) ease;
 }
 
-.header__menu-item:hover span {
-    text-decoration: underline;
-    text-underline-offset: 0.3rem;
+// .header__menu-item:hover span {
+//     text-decoration: underline;
+//     text-underline-offset: 0.3rem;
+// }
+.header__menu-item::before {
+    position: absolute;
+    border-top: 0.4rem solid #000;
+    content: "";
+    margin: 0 auto;
+    top: 50%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 0;
+    transition: 0.3s;
 }
 
-.header__active-menu-item {
-    transition: text-decoration-thickness var(--duration-short) ease;
-    color: rgb(var(--color-foreground));
-    text-decoration: underline;
-    text-underline-offset: 0.3rem;
-}
-
-.header__menu-item:hover .header__active-menu-item {
-    text-decoration-thickness: 0.2rem;
+.header__menu-item:hover::before {
+    width: 100%;
 }
 
 .header__submenu {
